FLY wire David/force-app/main/default/objects/Contact/fields/texcellency__DefHC_LinkedInProfile__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_LinkedInProfile__c</fullName>
    <label>DHC LinkedIn Profile</label>
    <length>2200</length>
    <type>LongTextArea</type>
</CustomField>