FLY wire David/force-app/main/default/objects/Contact/fields/texcellency__DefHC_Record_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>texcellency__DefHC_Record_Changed_Date__c</fullName>
    <description>Date on which DefHC Executive record was updated.</description>
    <label>DHC Record Changed Date</label>
    <type>Date</type>
</CustomField>