FLY wire David/force-app/main/default/objects/Contact/fields/Txt_Flow_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Txt_Flow_Trigger__c</fullName>
    <description>Used for flow automation trigger. Admin only.</description>
    <inlineHelpText>Used for flow automation trigger. Admin only.</inlineHelpText>
    <label>Txt Flow Trigger</label>
    <type>TextArea</type>
</CustomField>