FLY wire David/force-app/main/default/objects/Contact/fields/WPM_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>WPM_Contact_ID__c</fullName>
    <description>WPM Contact Record ID in Hubspot</description>
    <externalId>true</externalId>
    <inlineHelpText>WPM Contact Record ID in Hubspot</inlineHelpText>
    <label>WPM Contact ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>