FLY wire David/force-app/main/default/objects/Contact/fields/WPM_Education_Training__c.field-meta.xml
<CustomField>
    <fullName>WPM_Education_Training__c</fullName>
    <description>WPM Education Training. Should be replaced by Campaigns in future.</description>
    <inlineHelpText>WPM Education Training</inlineHelpText>
    <label>WPM Education Training</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AML Fraud Foundation Training 2022</fullName>
            </value>
            <value>
                <fullName>OS Advanced Training (Virtual) 2020</fullName>
            </value>
            <value>
                <fullName>OS Advanced Training (Virtual) 2021</fullName>
            </value>
            <value>
                <fullName>OS Advanced Training (Virtual) 2022</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (C&amp;E - Virtual) 2020</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (C&amp;E - Virtual) 2021</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (C&amp;E - Virtual) 2022</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (C&amp;E - Virtual) 2023</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (PC) 05/2020</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (PC) 2018</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (PC) 2019</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (PC - Virtual) 2020</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (PC - Virtual) 2021</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (PC - Virtual) 2022</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (PC - Virtual) 2023</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (SC/C&amp;E) 2018</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (SC/C&amp;E) 2019</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (SC - Virtual) 2020</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (SC - Virtual) 2021</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (SC - Virtual) 2022</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals (SC - Virtual) 2023</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals Webinar (Booking Management) 2022</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals Webinar (Booking Management) 2023</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals Webinar (Courses) 2022</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals Webinar (Courses) 2023</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals Webinar (Email Templates) 2022</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals Webinar (Event Extras) 2022</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals Webinar (Event Extras) 2023</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals Webinar (Events) 2022</fullName>
            </value>
            <value>
                <fullName>OS Fundamentals Webinar (Events) 2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>