FLY wire David/force-app/main/default/objects/Contact/fields/WPM_Events__c.field-meta.xml
<CustomField>
    <fullName>WPM_Events__c</fullName>
    <description>WPM Events - used by marketing. Look into moving away from this and using campaigns.</description>
    <inlineHelpText>WPM Events</inlineHelpText>
    <label>WPM Events</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquirer Review Webinar 210225</fullName>
            </value>
            <value>
                <fullName>Agent Summit 2022</fullName>
            </value>
            <value>
                <fullName>AML Summit 220512</fullName>
            </value>
            <value>
                <fullName>AML Summit 220512 Follow Up</fullName>
            </value>
            <value>
                <fullName>AML Webinar 210526</fullName>
            </value>
            <value>
                <fullName>Annual Conference 2018</fullName>
            </value>
            <value>
                <fullName>Annual Conference 2019</fullName>
            </value>
            <value>
                <fullName>Annual Conference 2020</fullName>
            </value>
            <value>
                <fullName>Annual Conference 2021</fullName>
            </value>
            <value>
                <fullName>Annual Conference 2022</fullName>
            </value>
            <value>
                <fullName>Annual Conference 2022 (Virtual)</fullName>
            </value>
            <value>
                <fullName>Annual Conference 2023</fullName>
            </value>
            <value>
                <fullName>China UnionPay Webinar 210309</fullName>
            </value>
            <value>
                <fullName>Credit Control Webinar 210114</fullName>
            </value>
            <value>
                <fullName>Crooks Launch Webinar 211007</fullName>
            </value>
            <value>
                <fullName>International Payments Summit 2019</fullName>
            </value>
            <value>
                <fullName>International Payments Summit 2022</fullName>
            </value>
            <value>
                <fullName>International Payments Webinar 2020</fullName>
            </value>
            <value>
                <fullName>Payment Security Conference 2018</fullName>
            </value>
            <value>
                <fullName>Payment Security Conference 2019</fullName>
            </value>
            <value>
                <fullName>Payment Security Conference 2020</fullName>
            </value>
            <value>
                <fullName>Payment Security Conference 2022</fullName>
            </value>
            <value>
                <fullName>Payment Security Roadshow 2022</fullName>
            </value>
            <value>
                <fullName>Payment Security Webinar 211020</fullName>
            </value>
            <value>
                <fullName>Tuition Fee Fraud Summit (Mar 2020)</fullName>
            </value>
            <value>
                <fullName>Virtual Payment Security Conference 2020</fullName>
            </value>
            <value>
                <fullName>Virtual PS Summit 2021</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>