FLY wire David/force-app/main/default/objects/Contact/fields/WPM_Payment_Platform_Roles__c.field-meta.xml
<CustomField>
    <fullName>WPM_Payment_Platform_Roles__c</fullName>
    <description>WPM Payment Platform Roles</description>
    <inlineHelpText>WPM Payment Platform Roles</inlineHelpText>
    <label>WPM Payment Platform Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extranet User</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Online Store Administrator</fullName>
            </value>
            <value>
                <fullName>Online Store Reporting User</fullName>
            </value>
            <value>
                <fullName>Online Store User</fullName>
            </value>
            <value>
                <fullName>RCP Administrator</fullName>
            </value>
            <value>
                <fullName>RCP User</fullName>
            </value>
            <value>
                <fullName>WEBDDS User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>