FLY wire David/force-app/main/default/objects/Contact/fields/WPM_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>WPM_Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify WPM Contacts. SAL-3692
SAL-4982: Changed field name from WPM Contact to WPM Primary Contact</description>
    <inlineHelpText>Used to identify WPM Contacts</inlineHelpText>
    <label>WPM Primary Contact</label>
    <type>Checkbox</type>
</CustomField>