FLY wire David/force-app/main/default/objects/Contact/fields/x1st_Touch_Campaign__c.field-meta.xml
<CustomField>
    <fullName>x1st_Touch_Campaign__c</fullName>
    <label>1st Touch Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>