FLY wire David/force-app/main/default/objects/Contact/fields/X1st_Touch_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>X1st_Touch_Campaign_Type__c</fullName>
    <description>For marketing attribution, summarizes 1st Touch Campaign by campaign naming convention.</description>
    <formula>IF(BEGINS(x1st_Touch_Campaign__c,&quot;Website&quot;), &quot;Website&quot;,
IF(BEGINS(x1st_Touch_Campaign__c,&quot;Webinar&quot;), &quot;Webinar&quot;,
IF(BEGINS(x1st_Touch_Campaign__c,&quot;Virtual&quot;), &quot;Virtual Event&quot;,
IF(BEGINS(x1st_Touch_Campaign__c,&quot;TS&quot;), &quot;Tradeshow&quot;,
IF(BEGINS(x1st_Touch_Campaign__c,&quot;Tradeshow&quot;), &quot;Tradeshow&quot;,
IF(BEGINS(x1st_Touch_Campaign__c,&quot;Partner&quot;), &quot;Partner&quot;,
IF(BEGINS(x1st_Touch_Campaign__c,&quot;Form&quot;), &quot;Form&quot;,
IF(BEGINS(x1st_Touch_Campaign__c,&quot;Event&quot;), &quot;Event&quot;,
IF(BEGINS(x1st_Touch_Campaign__c,&quot;Email&quot;), &quot;Email&quot;,
IF(BEGINS(x1st_Touch_Campaign__c,&quot;Content&quot;), &quot;Content&quot;,
IF(BEGINS(x1st_Touch_Campaign__c,&quot;AD_&quot;), &quot;Online Advertising&quot;,
IF(BEGINS(x1st_Touch_Campaign__c,&quot;Flywire Forward&quot;), &quot;Flywire Forward&quot;,

&quot;Other&quot;))))))))))))</formula>
    <inlineHelpText>For marketing attribution, summarizes 1st Touch Campaign by campaign naming convention.</inlineHelpText>
    <label>1st Touch Campaign Type</label>
    <type>Text</type>
</CustomField>