FLY wire David/force-app/main/default/objects/Contact/fields/x1st_Touch_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>x1st_Touch_Timestamp__c</fullName>
    <description>The date and time the person engaged with the 1st touch marketing campaign.</description>
    <label>OBS_1st Touch Date</label>
    <type>Date</type>
</CustomField>