FLY wire David/force-app/main/default/objects/Contact/validationRules/First_Last_Email_and_Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Last_Email_and_Account_Required</fullName>
    <active>true</active>
    <description>Contact Records must have first, last, email, and be assigned to account. Created to keep the database clean in the event of potential workarounds or API integrations.</description>
    <errorConditionFormula>AND(
ISNEW(),
(OR(
ISBLANK(FirstName),
ISBLANK( LastName ),
ISBLANK( Email ),
ISBLANK( AccountId ))))
&amp;&amp; Contact_Automation_Bypassed__c = False</errorConditionFormula>
    <errorMessage>Contact Record must have First Name, Last Name, Email, and be assigned to an Account.</errorMessage>
</ValidationRule>