FLY wire David/force-app/main/default/objects/Contact/listViews/AML_SIG_Members.listView-meta.xml
<ListView>
    <fullName>AML_SIG_Members</fullName>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Inactive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subject_Interests__c</field>
        <operation>includes</operation>
        <value>AML SIG Member</value>
    </filters>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>AML SIG Members</label>
</ListView>