FLY wire David/force-app/main/default/objects/Contact/listViews/B2B_Webinar_April_2022_Contacts_Dynamic.listView-meta.xml
<ListView>
    <fullName>B2B_Webinar_April_2022_Contacts_Dynamic</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Account_Industry__c</field>
        <operation>equals</operation>
        <value>Business</value>
    </filters>
    <filters>
        <field>Contact_Status__c</field>
        <operation>notEqual</operation>
        <value>Disqualified,Marketing Only</value>
    </filters>
    <label>B2B Webinar April 2022_Contacts Dynamic</label>
    <sharedTo>
        <group>Marketo_Dynamic_Lists</group>
    </sharedTo>
</ListView>