FLY wire David/force-app/main/default/objects/Contact/listViews/BDR_Lead_Queue_from_Pardot.listView-meta.xml
<ListView>
    <fullName>BDR_Lead_Queue_from_Pardot</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>padmi</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Carchedi</value>
    </filters>
    <label>BDR Lead Queue from Pardot</label>
</ListView>