FLY wire David/force-app/main/default/objects/Contact/listViews/BDR_UCollect_Customer_Play.listView-meta.xml
<ListView>
    <fullName>BDR_UCollect_Customer_Play</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>BDR_Owner__c</columns>
    <columns>PARENT.NAME</columns>
    <columns>CONTACT.DO_NOT_CALL</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <label>BDR_UCollect Customer Play</label>
</ListView>