FLY wire David/force-app/main/default/objects/Contact/listViews/Commercial_Contacts_Recent_Activity.listView-meta.xml
<ListView>
    <fullName>Commercial_Contacts_Recent_Activity</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.Account_Industry__c</field>
        <operation>equals</operation>
        <value>Business,Manufacturing,Other,Tech,Travel</value>
    </filters>
    <label>Commercial Contacts - Recent Activity</label>
</ListView>