FLY wire David/force-app/main/default/objects/Contact/listViews/EDU_USA_Recent_Marketing_Activity.listView-meta.xml
<ListView>
    <fullName>EDU_USA_Recent_Marketing_Activity</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>mkto_si__Last_Interesting_Moment_Date__c</columns>
    <columns>mkto_si__Last_Interesting_Moment_Type__c</columns>
    <columns>mkto_si__Last_Interesting_Moment_Desc__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS2_COUNTRY</field>
        <operation>equals</operation>
        <value>USA,US,United States</value>
    </filters>
    <filters>
        <field>Account.Account_Industry__c</field>
        <operation>equals</operation>
        <value>Education</value>
    </filters>
    <filters>
        <field>mkto_si__Last_Interesting_Moment_Type__c</field>
        <operation>notEqual</operation>
        <value>Milestone</value>
    </filters>
    <label>EDU - USA - Recent Marketing Activity</label>
</ListView>