FLY wire David/force-app/main/default/objects/Contact/listViews/Global_Payments_Contacts.listView-meta.xml
<ListView>
    <fullName>Global_Payments_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Partner_Type__c</field>
        <operation>equals</operation>
        <value>Banking Partner,Payment Service Provider</value>
    </filters>
    <label>Global Payments Contacts</label>
    <sharedTo>
        <role>Global_Payments_PM</role>
        <role>Global_Payments_RM</role>
    </sharedTo>
</ListView>