FLY wire David/force-app/main/default/objects/Contact/listViews/HC_My_Top_EPIC_Targets.listView-meta.xml
<ListView>
    <fullName>HC_My_Top_EPIC_Targets</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4 OR 5 OR 6)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Account.Account_Category__c</field>
        <operation>equals</operation>
        <value>Target,Top Target</value>
    </filters>
    <filters>
        <field>Contact_s_Office__c</field>
        <operation>equals</operation>
        <value>RevCycle,PFS – Patient Financial Services,Patient Experience,Innovation,Digital,CEO,CFO,COO,CIO,CIO/CTO,CRO</value>
    </filters>
    <filters>
        <field>Account.texcellency__DefHC_EMR_Vendor_Inpatient__c</field>
        <operation>contains</operation>
        <value>epic</value>
    </filters>
    <filters>
        <field>Account.texcellency__DefHC_EMR_Vendor_Ambulatory__c</field>
        <operation>contains</operation>
        <value>epic</value>
    </filters>
    <filters>
        <field>Account.Electronic_Medical_Rec_Inpatient__c</field>
        <operation>contains</operation>
        <value>epic</value>
    </filters>
    <filters>
        <field>Account.Electronic_Medical_Rec_Ambulatory__c</field>
        <operation>contains</operation>
        <value>epic</value>
    </filters>
    <label>HC My EPIC Targets</label>
    <sharedTo>
        <group>All_HC</group>
    </sharedTo>
</ListView>