FLY wire David/force-app/main/default/objects/Contact/listViews/HC_My_Top_Targets_to_Engage.listView-meta.xml
<ListView>
    <fullName>HC_My_Top_Targets_to_Engage</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Account.Account_Category__c</field>
        <operation>equals</operation>
        <value>Target,Top Target</value>
    </filters>
    <filters>
        <field>Contact_s_Office__c</field>
        <operation>equals</operation>
        <value>RevCycle,PFS – Patient Financial Services,Patient Experience,Innovation,Digital,CEO,CFO,COO,CIO,CIO/CTO,CRO</value>
    </filters>
    <filters>
        <field>CONTACT.LAST_ACTIVITY</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <label>HC My Targets to Engage</label>
    <sharedTo>
        <group>All_HC</group>
    </sharedTo>
</ListView>