FLY wire David/force-app/main/default/objects/Contact/listViews/HC_RevCycle_Top_Target.listView-meta.xml
<ListView>
    <fullName>HC_RevCycle_Top_Target</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Account.Account_Category__c</field>
        <operation>equals</operation>
        <value>Target,Top Target</value>
    </filters>
    <filters>
        <field>Contact_s_Office__c</field>
        <operation>equals</operation>
        <value>RevCycle,CRO</value>
    </filters>
    <label>HC My Target RevCycle Office</label>
    <sharedTo>
        <group>All_HC</group>
    </sharedTo>
</ListView>