FLY wire David/force-app/main/default/objects/Contact/listViews/Marco_s_Contacts.listView-meta.xml
<ListView>
    <fullName>Marco_s_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Marco&apos;s Contacts</label>
</ListView>