FLY wire David/force-app/main/default/objects/Contact/listViews/My_RM_Account_Contacts.listView-meta.xml
<ListView>
    <fullName>My_RM_Account_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Engagement_Status__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account.OwnerRM_Running_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My RM Account Contacts</label>
</ListView>